Fixes overflowing abilities list

--- a/src/app/resume/page.scss
+++ b/src/app/resume/page.scss
@@ -7,9 +7,11 @@
 @media(max-width: 749px) {
     #abilities {
         ul {
+            display: block;
             text-align: center;
             li {
-                display: inline;
+                display: inline-block;
+                margin: 3px;
             }
         }
     }
